Kubernetes/api-deployment-for-update.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: dotnet-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: dotnet-api
    spec:
      containers:
      - name: dotnet-api
        image: trilokp/libraryservice:latest
        ports:
        - containerPort: 80
