Kubernetes/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-api-service
spec:
  selector:
    app: dotnet-api
  ports:
  - protocol: TCP
    port: 80        
    targetPort: 80
  type: ClusterIP
